# sglang-plugin-FL

./: .gitignore  .pre-commit-config.yaml  OP_COVERAGE.md  README.md  README_zh.md  _typos.toml  pyproject.toml
examples/: README.md  qwen3_6_27b_offline_inference.py  qwen3_6_35b_a3b_offline_inference.py
sglang_fl/: __init__.py  communicator.py  flagcx_communicator.py  platform.py
sglang_fl/config/: __init__.py  cuda.yaml  nvidia.yaml  sample.yaml
sglang_fl/dispatch/: __init__.py  builtin_ops.py  fla_patch.py  logger_manager.py  manager.py  ops.py  policy.py  registry.py  types.py
sglang_fl/dispatch/backends/: __init__.py  base.py
sglang_fl/dispatch/backends/flaggems/: flaggems.py  register_ops.py
sglang_fl/dispatch/backends/reference/: reference.py  (+1 more)
sglang_fl/dispatch/bridge/: __init__.py  fla_chunk.py  fla_fused_recurrent.py  fla_packed_decode.py  fused_moe.py  gemma_rms_norm.py  mrotary_embedding.py  rms_norm.py  rotary_embedding.py  silu_and_mul.py  topk.py
sglang_fl/dispatch/config/: __init__.py  ascend.yaml  nvidia.yaml  utils.py
sglang_fl/dispatch/glue/: __init__.py  rms_norm.py  rotary_embedding.py  silu_and_mul.py
sglang_fl/distributed/: __init__.py  communicator.py
sglang_fl/distributed/device_communicators/: __init__.py
sglang_plugin_FL/: __init__.py  communicator.py  device.py  flagcx_communicator.py  platform.py
sglang_plugin_FL/config/: __init__.py  sample.yaml
sglang_plugin_FL/ops/: __init__.py  reference.py  rms_norm.py  rotary_embedding.py  silu_and_mul.py
tests/: test_e2e_config.py  test_precision_align.py  validate.sh
(+14 files in other folders)
