[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "sglang_plugin_FL"
version = "0.1.0"
description = "SGLang OOT Plugin — FlagGems-based multi-chip adaptation"
requires-python = ">=3.8"
dependencies = [
    "flag_gems",
    "pyyaml",
]

[project.entry-points."sglang.srt.platforms"]
sglang_plugin_FL = "sglang_plugin_FL:activate_platform"

[project.entry-points."sglang.srt.plugins"]
sglang_plugin_FL = "sglang_plugin_FL:load_plugin"

[tool.setuptools.packages.find]
include = ["sglang_plugin_FL*"]

[tool.setuptools.package-data]
"sglang_plugin_FL.config" = ["*.yaml"]
