[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "sglang_fl"
version = "0.1.0"
description = "SGLang OOT Plugin — FlagGems-based multi-chip adaptation"
requires-python = ">=3.8"
dependencies = [
    "flag_gems",
    "pyyaml",
]

[project.entry-points."sglang.srt.platforms"]
sglang_fl = "sglang_fl:activate_platform"

[project.entry-points."sglang.srt.plugins"]
sglang_fl = "sglang_fl:load_plugin"

[tool.setuptools.packages.find]
include = ["sglang_fl*"]

[tool.setuptools.package-data]
"sglang_fl.dispatch.config" = ["*.yaml"]
